# icalstatus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
icalstatus/: date.py  parse.py  retry.py  status.py
tests/: test_humanize.py
