[tool]
[tool.poetry]
name = "icalstatus"
version = "0.0.8"
description = "icalstatus"
license = "ISC"
classifiers = ["Development Status :: 4 - Beta", "Topic :: Utilities", "License :: OSI Approved :: ISC License (ISCL)"]
homepage = "https://github.com/frbor/icalstatus"
authors = ["Fredrik Borg <fredrikb.borg@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
icalstatus = "icalstatus.status:status"
icalwaybar = "icalstatus.status:waybar"
icalparse = "icalstatus.parse:main"

[tool.poetry.dependencies]
python = "^3.11"
caep = "^1.1.0"
requests = "^2.31.0"
recurring-ical-events = "^2.1.2"
icalendar = "^5.0.0"
pytz = "*"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pytest = "^7.3.1"
pre-commit = "^3.3.1"
ruff = "^0.1.13"
mypy = "^1.8.0"
types-requests = "*"
types-python-dateutil = "*"
types-pytz = "*"

[tool.mypy]
strict = true

[tool.ruff]
# pyflakes, pycodestyle, pyupgrade and isort
select = ["F", "E", "W", "UP", "I001"]

target-version = "py311"
