[project]
name = "icalstatus"
version = "0.0.9"
description = "icalstatus"
authors = [{ name = "Fredrik Borg", email = "fredrikb.borg@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "ISC"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "License :: OSI Approved :: ISC License (ISCL)",
]
dependencies = [
    "caep>=1.1.0,<2",
    "requests>=2.31.0,<3",
    "recurring-ical-events>=2.1.2,<3",
    "icalendar>=5.0.0,<6",
    "pytz",
]

[project.urls]
Homepage = "https://github.com/frbor/icalstatus"

[project.scripts]
icalstatus = "icalstatus.status:status"
icalwaybar = "icalstatus.status:waybar"
icalexecutor = "icalstatus.status:executor"
icalparse = "icalstatus.parse:main"

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8",
    "pre-commit == 4.0.*",
    "pre-commit-hooks == 4.6.*",
    "ruff>=0.9,<1",
    "mypy>=1.15.0,<2",
    "types-requests",
    "types-python-dateutil",
    "types-pytz",
]

[tool.mypy]
strict = true

[tool.ruff]
# pyflakes, pycodestyle, pyupgrade and isort
select = ["F", "E", "W", "UP", "I001"]

target-version = "py311"

[tool.hatch.build.targets.wheel]
include = ["icalstatus"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
