[project]
name = "icalstatus"
version = "0.0.11"
description = "icalstatus"
authors = [{ name = "Fredrik Borg", email = "fredrikb.borg@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "ISC"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "License :: OSI Approved :: ISC License (ISCL)",
]
dependencies = [
    "caep>=1.3.0,<2",
    "requests>=2.31.0,<3",
    "recurring-ical-events>=3.5.2,<4",
    "icalendar>=6.0.0,<7",
]

[project.urls]
Homepage = "https://github.com/frbor/icalstatus"

[project.scripts]
icalstatus = "icalstatus.status:status"
icalwaybar = "icalstatus.status:waybar"
icalexecutor = "icalstatus.status:executor"
icalparse = "icalstatus.parse:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pre-commit == 4.0.*",
    "pre-commit-hooks == 4.6.*",
    "ruff>=0.9,<1",
    "mypy>=1.15.0,<2",
    "types-requests",
    "types-python-dateutil",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",   # Builtins
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "PTH", # Pathlib
    "I",   # isort
    "C",   # mccabe rules
]

ignore = [
    "E501",   # Ignore long lines - handled by ruff format
    "B019",   # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
]

[tool.hatch.build.targets.wheel]
include = ["icalstatus"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
